# helpme

./: .gitignore  .gitlab-ci.yml  .lgtm.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  codecov.yml
.github/workflows/: build_and_test.yml  cmake.yml
cmake/: FindFFTW.cmake  FindMKL.cmake  custom_color_messages.cmake  helpmeConfig.cmake.in  optionsTools.cmake
conda/: _conda_vers.py
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in
docs/sphinx/: Makefile.sphinx.in  bibliography.rst  conf.py.in  gettingstarted.rst  index.rst  introduction.rst  make.bat
python/: CMakeLists.txt  Manifest.in  __init__.py  metadata.py  pywrappers.cc  setup.py  versioner.py
single_header/: helpme_standalone.h
single_include/: helpme_standalone.h
src/: CMakeLists.txt  cartesiantransform.h  fftw_wrapper.h  fletcher.h  gamma.h  gridsize.h  helpme.F90  helpme.cc  helpme.f90  helpme.h  lapack_wrapper.h  matrix.h  memory.h  mipp_wrapper.h  mpi_wrapper.h  powers.h  pywrappers.cc  splines.h  string_utils.h  tensor_utils.h
test/: CMakeLists.txt  dhfr_benchmark.cpp  dhfr_findif.cpp  dmpc3x3_benchmark.cpp  fullexample.F90  fullexample.c  fullexample.cpp  fullexample.f90  fullexample.py  fullexample_parallel.F90  fullexample_parallel.c  fullexample_parallel.cpp  make_benchmark.hpp  make_benchmark.i  print_results.h  test_helpme.py  waterbox12288_benchmark.cpp  waterbox139968_benchmark.cpp  waterbox192000_benchmark.cpp  waterbox24000_benchmark.cpp  waterbox255552_benchmark.cpp  waterbox331776_benchmark.cpp  waterbox41472_benchmark.cpp  waterbox421824_benchmark.cpp  waterbox526848_benchmark.cpp  waterbox65856_benchmark.cpp  waterbox98304_benchmark.cpp
test/data/: dhfr_c6s.txt  dhfr_charges.txt  dhfr_coords.txt  dmpc3x3_c6s.txt  dmpc3x3_charges.txt  waterbox12288_c6s.txt  waterbox12288_charges.txt  waterbox12288_coords.txt  waterbox139968_c6s.txt  waterbox139968_charges.txt  waterbox192000_c6s.txt  waterbox192000_charges.txt  waterbox24000_c6s.txt  waterbox24000_charges.txt  waterbox24000_coords.txt  waterbox255552_c6s.txt  waterbox255552_charges.txt  waterbox331776_charges.txt  waterbox41472_c6s.txt  waterbox41472_charges.txt  waterbox41472_coords.txt  waterbox421824_charges.txt  waterbox526848_charges.txt  waterbox65856_c6s.txt  waterbox65856_charges.txt  waterbox65856_coords.txt  waterbox98304_c6s.txt  waterbox98304_charges.txt
test/unittests/: CMakeLists.txt  mpihelper.h  unittest-cartesiantransform.cpp  unittest-cdq-field-findif.cpp  unittest-coulomb-rec-parallel.cpp  unittest-coulombkappasweep.cpp  unittest-d-field-kappasweep.cpp  unittest-dipolereference.cpp  unittest-dispersion-rec-parallel.cpp  unittest-dispersionkappasweep.cpp  unittest-fft.cpp  unittest-fletcher.cpp  unittest-fullrun-compressed.cpp  unittest-fullrun-isodipole-virial.cpp  unittest-fullrun-multipoles.cpp  unittest-fullrun.cpp  unittest-gammafunction.cpp  unittest-gridsize.cpp  unittest-individualshells.cpp  unittest-lattice.cpp  unittest-latticeupdates.cpp  unittest-main.cpp  unittest-matrix.cpp  unittest-minimumimage.cpp  unittest-potential.cpp  unittest-powers.cpp  unittest-splines.cpp  unittest-string.cpp  unittest-tensor.cpp
tools/: check_style.sh  generate_water_benchmarks.py  inline_headers.py  show_coverage.sh
